--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
-node_modules
+# dependencies
+node_modules/
+
+# Next.js build output
+.next/
+out/
+
+# dotenv environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDEs
+.vscode/
+.idea/
+
+# log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# optional: images generated
+*.log
+*.lock
+*.pid
+
+# compiled output
+dist/
+
+# testing
+coverage/
